bug: footer-overlap

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,8 +1,5 @@
 .app {
 	height: 100%;
-	gap: 16px;
-	padding: 32px;
-
 	display: flex;
 	flex-direction: column;
 }
