--- a/src/components/TopBar/topBar.module.scss
+++ b/src/components/TopBar/topBar.module.scss
@@ -3,4 +3,5 @@
 .topBar {
 	@include font-poppins;
 	width: 100%;
+	padding: 32px 32px 16px;
 }
