--- a/src/components/WidgetHolder/widgetHolder.module.scss
+++ b/src/components/WidgetHolder/widgetHolder.module.scss
@@ -2,7 +2,8 @@
 @import "/src/styles/variables.scss";
 
 .widgetHolderWrapper {
-	padding: 8px;
+	padding: 8px 40px;
+	height: 100%;
 	overflow: auto;
 	.widgetHolder {
 		display: flex;
